fixed some css issues on mobile devices

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -128,6 +128,9 @@ img {
 .my-3 {
 	margin: 3rem 0;
 }
+.mb-1 {
+	margin-bottom: 1rem;
+}
 
 .btn {
 	display: inline-block;
